minor top spacing fix

--- a/src/acceleratorcommunity/src/assets/globalNavigation.css
+++ b/src/acceleratorcommunity/src/assets/globalNavigation.css
@@ -19,5 +19,5 @@
   padding-top: 20px;
 }
 .header + .main {
-  padding-top: 70px;
+  padding-top: 80px;
 }
