--- a/src/acceleratorcommunity/src/assets/peopleyoumayknow.module.css
+++ b/src/acceleratorcommunity/src/assets/peopleyoumayknow.module.css
@@ -143,7 +143,6 @@
 .container {
   display: flex;
   gap: 10px;
-  margin-top: 20px;
   padding: 0 10px;
   justify-content: space-between;
 }
